--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,4 @@
-button {width: 100px; overflow: hidden; height: 35px;}
+button.link {width: 100px; overflow: hidden; height: 35px;}
+button.pin {width: 30px; height: 35px;}
+.pinned {background-color: red;}
+
